# RedRobot-HedgeBot

./: .env.example  .gitignore  ARCHITECTURE.md  BACKTEST_RESULTS_2024.md  BACKTEST_SYSTEM_GUIDE.md  BUILD_INSTRUCTIONS.md  CLAUDE_MCP_SETUP.md  COMPLETE_SYSTEM_GUIDE.md  COMPLETE_SYSTEM_OVERVIEW.md  Cargo.toml  DELIVERY_SUMMARY.md  DEPLOYMENT_DIGITALOCEAN.md  DYNAMIC_POSITION_SIZING.md  FEE_AWARE_TRADING.md  FINAL_DELIVERY.md  FRAMEWORKS_AND_AI_INTEGRATION.md  FULL_INTEGRATION_PLAN.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INTEGRATION_COMPLETE.md  LEVERAGE_SCALING_MECHANICS.md  MAINNET_DEPLOYMENT_GUIDE.md  MODULES_SUMMARY.md  NEXT_STEPS.txt  PHASE2_API_REFERENCE.md  PHASE2_IMPLEMENTATION.md  PHASE_1_SUMMARY.md  PRICE_ACTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_EXAMPLES.md  QUICK_START.md  README.md  SMALL_CAPITAL_DEPLOYMENT.md  STRATEGY_ATTRIBUTION_SUMMARY.md  TESTING_THE_THEORY.md  THEORY_VALIDATION_READY.md  WHAT_YOU_HAVE_NOW.md  btc_dominance_backtest.py  deploy.sh  hedgebot.service  signal_quality_backtest.py
.github/scripts/: vps_ci_gate.sh
.github/workflows/: ci.yml  test.yml
docs/: STRATEGY_ATTRIBUTION_ANALYSIS.md
logs/ci/: 2026-03-13_224409_718c60b_FAILED.json  2026-03-13_233453_5b8242d_FAILED.json  2026-03-14_051731_5c0c89a_FAILED.json  2026-03-14_054315_807fbe3_FAILED.json  2026-03-14_055616_faee28a_FAILED.json  2026-03-14_055838_00620de_FAILED.json  2026-03-14_060103_10982ea_FAILED.json  2026-03-14_060605_1db9d23_FAILED.json  2026-03-14_060912_03be0de_FAILED.json  2026-03-14_061103_0d261d4_FAILED.json  2026-03-14_090511_65dce9d_FAILED.json  2026-03-14_091712_000fd5f_FAILED.json  README.md  (+12 more)
migrations/: 001_initial.sql
src/: ai_decision_engine.rs  ai_reviewer.rs  backtest.rs  config.rs  daily_analyst.rs  dashboard.rs  data.rs  db.rs  dca_scoring_integration.rs  decision.rs  dynamic_position_sizing.rs  exchange.rs  fee_calculator.rs  frameworks.rs  fund_tracker.rs  funding.rs  indicators.rs  learner.rs  lib.rs  main.rs  price_action_scoring.rs  risk.rs  scoring_system.rs  sentiment.rs  signals.rs  simulator.rs  strategy_analytics.rs  strategy_attribution.rs  tenant.rs  trade_log.rs  web_dashboard.rs
tests/: all_21_strategies_validation.rs  candidates_test.rs  integration_test.rs  integration_test_modules.rs  position_test.rs  signal_feed_test.rs  theory_validation.rs
web/: dashboard.css  strategy-performance.tsx
(+26 files in other folders)
