[package]
name = "redrobot-hedgebot"
version = "0.2.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = "0.14"
reqwest-retry = "0.3"

# WebSocket support
tokio-tungstenite = "0.20"
tungstenite = "0.20"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
solana-sdk = "1.18"
ed25519-dalek = "2.0"
sha2 = "0.10"
hmac-sha256 = "1.1"
hex = "0.4"

# Ethereum/EVM support (Phase 3)
ethers = { version = "2.0", optional = true }

# Logging & observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Database/storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
redis = "0.25"

# Data processing & ML (Phase 4)
polars = { version = "0.19", features = ["lazy"], optional = true }
ndarray = { version = "0.15", optional = true }
ndarray-stats = { version = "0.15", optional = true }
rusty-machine = { version = "0.5", optional = true }
tokenizers = { version = "0.13", optional = true }
ort = { version = "1.16", optional = true }

# Supabase RAG (Phase 4)
postgrest = { version = "0.5", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Testing
mockito = "1.2"
tokio-test = "0.4"

[dev-dependencies]
criterion = "0.5"  # Benchmarking

[features]
default = ["phase2", "phase3", "phase4"]
phase2 = []                          # Hyperliquid integration
phase3 = ["ethers"]                  # Bridge system & capital management
phase4 = ["polars", "ndarray", "ndarray-stats", "postgrest"]  # AI & autonomy
full = ["phase2", "phase3", "phase4"]
minimal = []

[[bench]]
name = "order_routing"
harness = false

[[bench]]
name = "capital_allocation"
harness = false

[[bench]]
name = "market_analysis"
harness = false

[[bench]]
name = "ai_decision_latency"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[lib]
name = "redrobot_hedgebot"
path = "src/lib.rs"

[[bin]]
name = "redrobot"
path = "src/main.rs"
